# clinical-formal-verification

./: .gitignore  README.md  pyproject.toml
baselines/: __init__.py  blind_render.py  common.py  ingest_judge.py  render.py  run_judge_api.py  run_judge_batch.py  run_llama_guard.py  run_nemo_guardrails.py  run_unit_test.py  run_verification.py
benchmark/: README.md  generate.py  generate_compute.py  generate_hard.py  generate_v2.py  generate_v3.py  validate.py
benchmark/answer_key/: medication-contraindication-pair.json  outreach-optout-persistence.json  triage-acuity-monotonicity.json
benchmark/examples/: medication-contraindication-pair.json  outreach-optout-persistence.json  triage-acuity-monotonicity.json
benchmark/schema/: README.md  answer_key.schema.json  benchmark.schema.json
benchmark/suite/: manifest.json
benchmark/suite_compute/: manifest.json
benchmark/suite_hard/: manifest.json
benchmark/suite_v2/: manifest.json
benchmark/suite_v3/: manifest.json
casestudies/: case_studies.md
docs/: authoring.md  judge.md  usage.md
docs/status/: milestone-1.md  milestone-2.md  milestone-3.md  milestone-5.md
experiments/: analyze.py  deviations.md  environment.md  figures.py  figures_all.py  protocol.md  results_combined.md
experiments/results/: summary.json  tables.md
paper/: appendix_AI_mdpi.md  architectural_limits.md  clinical_formal_verification_AI_mdpi.md
references/: literature_review.md  references.bib  summaries.md  verification.md
tests/: test_verifier.py
verifier/: __init__.py  cli.py  execute.py  model.py  replay.py  smt.py
(+5159 files in other folders)
